# c123c

Client_QML/: ChatPage.qml  Client_QML.pro  ContactPreferences.qml  GroupList.qml  LoginPage copy.qml  MessangesView.qml  loginpage.qml  main.cpp  main.qml  qml.qrc  serverconnector.cpp  serverconnector.h  sqlabstractmodel.cpp  sqlabstractmodel.h  sqlcontactmodel.cpp  sqlcontactmodel.h  sqlgroupmodel.cpp  sqlgroupmodel.h
Server/: Makefile  main.cpp  test2.sh
lib/: CMakeLists.txt  LoginPasswordPair.h  MessageParser.cpp  MessageParser.h  NonCopyable.h  RedisCommands.cpp  RedisCommands.h  RedisReplyHolder.h  RequestFunctions.cpp  RequestFunctions.h  RequestHandler.h  ServerThread.cpp  ServerThread.h  util.cpp  util.h
lib/Holders/: BaseHolder.cpp  BaseHolder.h  HolderInitException.h  HttpEvHolder.h  RedisContextHolder.cpp  RedisContextHolder.h  SocketHolder.cpp  SocketHolder.h
lib/cmake/Modules/: FindEvent.cmake  FindHiredis.cmake
test/: CMakeLists.txt  tests.cpp
